--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>React App</title>
+    <title>React-app</title>
   </head>
   <body>
     <script src="./src/index.js"></script>
